--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,3 +1,4 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="/css/bootstrap.css">
 <link rel="stylesheet" href="/css/bootstrap-theme.css">
+<link rel="stylesheet" href="/css/styles.css">
