--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: sans-serif
+}
+
 #botaoNovo {
     text-decoration: none;
     color: black;
@@ -15,4 +19,35 @@
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
+}
+
+#infoTitulos {
+    font-size: 20px;
+}
+
+#infoStatus {
+    color: darkred;
+}
+
+#infoAlterarStatus {
+    width: 250px;
+    font-size: 15px;
+    display: block;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 100%;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
 }
